<resources>
    <string name="app_name">Virtual Wallet</string>
    <string name="login_with_google">Login</string>
    <string name="title_activity_add_transation">Add Transation</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="value">Value</string>
    <string name="deposit">Deposit</string>
    <string name="expense">Expense</string>
    <string name="calendar">Calendar</string>
    <string name="type">Type</string>
    <string name="text_empty">Text empty</string>
    <string name="title_activity_home_wallet">Virtual Wallet</string>
    <string name="month">Month</string>
    <string name="title_activity_category">Category</string>
    <string name="chart">Chart</string>
    <string name="signout">Signout</string>
    <string name="hint_add_the_category">Add the Category</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="error">Error</string>
    <string name="categories">Categories</string>
    <string name="please_fill">Please fill</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign out</string>
    <string name="insert">Insert</string>
    <string name="textview">TextView</string>
    <string name="shopping">Shopping</string>
    <string name="salary">Salary</string>
    <string name="_7_000_00">7.000,00</string>
    <string name="_20_05_2018">20/05/2018</string>
    <string name="transport">Transport</string>
    <string name="add_category_button">add category button</string>
    <string name="detail_image">detail image</string>
    <string name="trash_image">trash image</string>
    <string name="balance">Balance:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="background">background</string>
    <string name="are_you_sure">"Are you sure?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="cancel">Cancel</string>
    <string name="plus_button">Plus Button</string>
    <string name="profile_image">Profile Image</string>
    <string name="spinner_months">Spinner Months</string>
    <string name="progressbar">Progress Bar</string>
    <string name="login_fail">Login Fail</string>
    <string name="admob_description">AdMob Banner</string>
    <string name="spending_by_category">"Earning Categories"</string>
    <string name="outside">outside</string>
    <string name="percentage_title">(%)</string>
    <string name="center_bottom">center-bottom</string>
    <string name="chart_description">Chart for Spendings</string>
    <string name="date">Date</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
